# actix-web

./: .gitignore
Server/: Cargo.toml
Server/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
client/src/controller/: ip_selector.rs  mod.rs  proposal.rs  reply.rs  verification.rs
client/src/utils/: mod.rs  proposal_structure.rs  remote_address.rs  reply_structure.rs  votes.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
keep_alive/: Cargo.toml
keep_alive/src/: main.rs
node1/src/: main.rs
node1/src/controller/: accept_proposal.rs  reply.rs  send_signal.rs
node2/src/: main.rs
node2/src/controller/: mod.rs
node3/src/: main.rs
node3/src/controller/: accept_proposal_secondry.rs  receive_signal.rs  receive_vote.rs  verification.rs  vote_result.rs
node4/src/: main.rs
node4/src/controller/: brodcast.rs  receive_signal.rs
pbft v1.0.0/: Cargo.toml
pbft v1.0.0/src/: main.rs
pbft v1.0.0/src/controller/: accept_proposal.rs  brodcast.rs  mod.rs  vote.rs
pbft v1.0.0/src/utils/: ips.rs  metadata.rs
pbft v2.0.0/src/: main.rs
pbft v2.0.0/src/controller/: accept_proposal.rs  accept_proposal_secondry.rs  brodcast.rs  mod.rs  send_proposal.rs  verification.rs
pbft v2.0.0/src/utils/: metadata.rs
pbft v3.0.0/src/controller/: accept_proposal_secondry.rs  brodcast.rs  send_proposal.rs  send_signal.rs
pbftBeta/src/: main.rs
pbftBeta/src/controller/: accept_proposal.rs  mod.rs  send_proposal.rs  vote.rs
pbftBeta/src/utils/: metadata.rs
tls/: .gitignore  Cargo.toml
